# llvm_hbm_pass

./: CMakeLists.txt
doc/: codedoc.md
include/: MyFunctionAnalysisPass.h  MyHBMOptions.h  MyInstrumentationPass.h  MyModuleTransformPass.h
ioctl/: doc.md  makefile  my_probe_driver.c  my_probe_ioctl.h  my_probe_user.c
runtime/: record_mem_access.c  runtime.c
src/: MyAdvancedHBMPlugin.cpp  MyFunctionAnalysisPass.cpp  MyInstrumentationPass.cpp  MyModuleTransformPass.cpp
